paragon/_common.scss
body {
    font-family: $font;
    margin: 0 !important; // this row must be deleted after this PR - https://github.com/openedx/frontend-app-communications/pull/193 will be merged
}

.container,
.container-fluid {
    max-width: $container-width;
}

#main-content:not(h1) {
    max-width: 100%;
    overflow-x: hidden;
}

#root,
#root div[data-testid="browser-router"],
#root div[data-testid="browser-router"] > div:not([class], [id]),
#root div[data-testid="redux-provider"] > div:not([class], [id]),
#root > div:first-child:last-child:not(.pgn__spinner) {
    display: flex;
    flex-direction: column;
    min-height: 100vh;

    & > main,
    #main-content,
    .learning-header + .pb-3.container {
        flex: 1 1 auto;
    }
}

#courseTabsNavigation ~ .header-action-bar ~ .d-flex.flex-row .d-flex .btn-outline-dark {
    @extend .btn-outline-primary;
}

.pgn__modal.pgn__modal-scroll-fullscreen {
    @include media-breakpoint-down(xs) {
        margin: 0;
    }
}

// Fix for bug with country dropdown in authn registartion page [RGOeX-26365]

.layout #main-content.main-content {
    overflow: visible;
}

// This fix must be deleted after this PR will be merged - https://github.com/openedx/frontend-app-course-authoring/pull/853

#root,
#paragon-portal-root {
    .btn-tertiary:hover {
        color: #454545;
        background: #e1dddb;
    }
}

